force-app/main/default/objects/SOI_Sport__c/SOI_Sport__c.object-meta.xml
<CustomObject>
    <label>Sport</label>
    <nameField>
        <label>Sport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>