force-app/main/default/objects/SOI_Sport__c/fields/SOI_Athlete__c.field-meta.xml
<CustomField>
    <fullName>SOI_Athlete__c</fullName>
    <label>Athlete</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Athlete</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sports</relationshipLabel>
    <relationshipName>Sports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>