force-app/main/default/objects/SOI_Sport__c/fields/SOI_IRAttrImpID__c.field-meta.xml
<CustomField>
    <fullName>SOI_IRAttrImpID__c</fullName>
    <label>SOI_IRAttrImpID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>