force-app/main/default/objects/SOI_Sport__c/fields/SOI_IRAttrIRImpID__c.field-meta.xml
<CustomField>
    <fullName>SOI_IRAttrIRImpID__c</fullName>
    <label>SOI_IRAttrIRImpID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>