force-app/main/default/objects/SOI_Sport__c/fields/SOI_NewAdded__c.field-meta.xml
<CustomField>
    <fullName>SOI_NewAdded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOI_NewAdded</label>
    <type>Checkbox</type>
</CustomField>