force-app/main/default/objects/SOI_Sport__c/fields/SOI_Status__c.field-meta.xml
<CustomField>
    <fullName>SOI_Status__c</fullName>
    <defaultValue>&quot;Unchanged&quot;</defaultValue>
    <label>SOI_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unchanged</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>